syntax = "proto3";

package trade;

option go_package = "./pkg/trade/pb";
import "google/protobuf/timestamp.proto";

service TradeService {
  rpc CreateTrade(CreateTradeRequest) returns (CreateTradeResponse) {}
  rpc EditTrade(EditTradeRequest) returns (EditTradeResponse) {}
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

// CreateTrade

message CreateTradeRequest {
  uint64 id = 1;
  float entry_price = 2;
  float exit_price = 3;
  float quantity = 4;
  float stop_loss = 5;
  float take_profit = 6;
  google.protobuf.Timestamp time_closed = 7;
  google.protobuf.Timestamp time_executed = 8;
  string comments = 9;
  string direction = 10;
  string instrument = 11;
  string market = 12;
  string outcome = 13;
  string strategy = 14;
}

message CreateTradeResponse {
  uint64 status = 1;
  string error = 2;
  uint64 id = 3;}

// EditTrade

message EditTradeData {
  uint64 id = 1;
  float entry_price = 2;
  float exit_price = 3;
  float quantity = 4;
  float stop_loss = 5;
  float take_profit = 6;
  google.protobuf.Timestamp time_closed = 7;
  google.protobuf.Timestamp time_executed = 8;
  string comments = 9;
  string direction = 10;
  string instrument = 11;
  string market = 12;
  string outcome = 13;
  string strategy = 14;
}

message EditTradeRequest {
  uint64 id = 1;
  float entry_price = 2;
  float exit_price = 3;
  float quantity = 4;
  float stop_loss = 5;
  float take_profit = 6;
  google.protobuf.Timestamp time_closed = 7;
  google.protobuf.Timestamp time_executed = 8;
  string comments = 9;
  string direction = 10;
  string instrument = 11;
  string market = 12;
  string outcome = 13;
  string strategy = 14;
}

message EditTradeResponse {
  uint64 status = 1;
  string error = 2;
  EditTradeData data = 3;
}

// FindOne

message FindOneData {
  uint64 id = 1;
  float entry_price = 2;
  float exit_price = 3;
  float quantity = 4;
  float stop_loss = 5;
  float take_profit = 6;
  google.protobuf.Timestamp time_closed = 7;
  google.protobuf.Timestamp time_executed = 8;
  string comments = 9;
  string direction = 10;
  string instrument = 11;
  string market = 12;
  string outcome = 13;
  string strategy = 14;
}

message FindOneRequest {
  uint64 id = 1;
}

message FindOneResponse {
  uint64 status = 1;
  string error = 2;
  FindOneData data = 3;
}

message DeleteRequest {
  repeated string id = 1;
}

message DeleteResponse {
  uint64 status = 1;
  string error = 2;
}